{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 10,
  "lineage": "42358060-be4e-4a76-662d-fa178ba1512c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "midnightEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00ba4d52928a4f52b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-87-227-98.compute-1.amazonaws.com",
            "public_ip": "54.87.227.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:262139658630:instance/i-0d522d48df82a14fb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d522d48df82a14fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071c21f2772cade13",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08032013154815b48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f741c4ba0232b507",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0633f2df198b35a91"
            ]
          },
          "dependencies": [
            "aws_eip.midnightEIP",
            "aws_security_group.midnightSG",
            "aws_subnet.midnightSubnet",
            "aws_vpc.midnightVPC",
            "data.http.myIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "midnightIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262139658630:internet-gateway/igw-0fadf63550c3f26ee",
            "id": "igw-0fadf63550c3f26ee",
            "owner_id": "262139658630",
            "tags": {
              "Name": "midnightIG"
            },
            "tags_all": {
              "Name": "midnightIG"
            },
            "vpc_id": "vpc-0e9beaa86bcc5f70e"
          },
          "dependencies": [
            "aws_vpc.midnightVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "midnightRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262139658630:route-table/rtb-0ce8c1a34f83f38e0",
            "id": "rtb-0ce8c1a34f83f38e0",
            "owner_id": "262139658630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fadf63550c3f26ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "midnightRT"
            },
            "tags_all": {
              "Name": "midnightRT"
            },
            "vpc_id": "vpc-0e9beaa86bcc5f70e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.midnightIG",
            "aws_vpc.midnightVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "midnightRTassc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdd6b58e66546cd8",
            "route_table_id": "rtb-0ce8c1a34f83f38e0",
            "subnet_id": "subnet-0f741c4ba0232b507"
          },
          "dependencies": [
            "aws_internet_gateway.midnightIG",
            "aws_route_table.midnightRT",
            "aws_subnet.midnightSubnet",
            "aws_vpc.midnightVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "midnightSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262139658630:security-group/sg-0633f2df198b35a91",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0633f2df198b35a91",
            "ingress": [
              {
                "cidr_blocks": [
                  "54.87.227.98/32",
                  "72.83.254.200/32"
                ],
                "description": "Allow SSH From my IP and the EIP ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "54.87.227.98/32"
                ],
                "description": "Allow HTTP Only From The EIP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "midnightSG",
            "name_prefix": "",
            "owner_id": "262139658630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "midnightSG"
            },
            "tags_all": {
              "Name": "midnightSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9beaa86bcc5f70e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.midnightEIP",
            "aws_vpc.midnightVPC",
            "data.http.myIP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "midnightSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262139658630:subnet/subnet-0f741c4ba0232b507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f741c4ba0232b507",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262139658630",
            "vpc_id": "vpc-0e9beaa86bcc5f70e"
          },
          "dependencies": [
            "aws_vpc.midnightVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "midnightVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262139658630:vpc/vpc-0e9beaa86bcc5f70e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07437092c52fcca42",
            "default_route_table_id": "rtb-0127a82c647bc1e1b",
            "default_security_group_id": "sg-05a4d85b1c3ab4707",
            "dhcp_options_id": "dopt-5e713a24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e9beaa86bcc5f70e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0127a82c647bc1e1b",
            "owner_id": "262139658630"
          }
        }
      ]
    }
  ]
}